toml-pretty-deser/compilation_failure_tests/tagged_enum_no_tag.stderr
error: custom attribute panicked
 --> compilation_failure_tests/tagged_enum_no_tag.rs:7:1
  |
7 | #[tpd]
  | ^^^^^^
  |
  = help: message: Simple enums must have unit variants. Use #[tpd(tag = "key")] for tagged enums.
